tests/pass/BXOR.java
package pass;

public class BXOR {
	
	public int xor(int x, int y) {
		return x ^ y;
	}
	
}
