tests/fail/BXOR.java
package fail;

public class BXOR {

	public static void main(String[] args) {
		System.out.println(true ^ 10);
	}

}
